# Cognex_driver

./: .gitignore  .pre-commit-config.yaml  Cognex_objdet.py  Dockerfile  README.md  client_Cognex_std.py  edu.robotraconteur.objectrecognition.robdef  pyproject.toml  socket_test.py
config/: generic_cognex_sensor_default_config.yml
docs/: cognex_setup.md  cognex_setup_spreadsheet.md
examples/: cognex_client.py  cognex_client_streaming.py  cognex_native_capture_image.py  cognex_native_commands_client.py
src/cognex_robotraconteur_driver/: __main__.py  _native_client.py  cognex_robotraconteur_driver.py  edu.robotraconteur.cognexsensor.robdef
tools/: final_with_no_objects.job  send_fake_data.py  socket_test.py  test_read_bmp.py
